task and schedule fixes

--- a/day2/task-scheduler-day2/src/main/resources/application.properties
+++ b/day2/task-scheduler-day2/src/main/resources/application.properties
@@ -14,3 +14,9 @@ management.endpoint.health.show-details=always
 spring.thymeleaf.cache=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+# Scheduling Configuration
+spring.task.scheduling.pool.size=5
+spring.task.scheduling.thread-name-prefix=scheduler-
+spring.task.execution.shutdown.await-termination=true
+spring.task.execution.shutdown.await-termination-period=10s
